<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tiendecitas v3</string>
	<string name="action_favourite">Favoritos</string>
	<string name="action_share">Compartir</string>
	<string name="action_call">Llamar</string>
	<string name="image_item_desc">Imagen de la Galería de Imagenes</string>
	<string name="toggle_open">Abrir Menú Lateral</string>
	<string name="toggle_close">Cerrar Menú Lateral</string>
    <string name="shotCurImgDesc">Imágen de la tienda</string>
    <string name="shotImgIconDesc">Comentario</string>	
    <string name="descTimes">Horarios:</string>
    <string name="descComment">Comentarios:</string>
    <string name="call_button">LLAMAR</string>
    <string name="gallery_button">¡Pulsa la foto!</string>
    <string name="title_activity_store_detail">Detalle de la Tienda</string>
    <string name="title_activity_shot">Imagen de la Tienda</string>
    <string name="community_text">Sección Comunidad (pronto)</string>
    <string name="map_text">Sección Mapa (pronto)</string>
    <string name="favourite_opt">Opción Favoritos (pronto)</string>
    <string name="share_store_txt">Echa un ojo a %1$S, %2$s.\nWeb: %3$s\nEmail: %5$s\nTeléfono: %4$s</string>
    <string name="commentDo">Comentar</string>
    <string name="detailCommentButtonDesc">Enviar mensaje</string>
    <string name="no_comments">No hay comentario todavía</string>
    <string name="gallery_fragment_key">Galería</string>
    <string name="store_fragment_key">Listado de tiendas</string>
    <string name="community_fragment_key">Comunidad</string>
    <string name="map_fragment_key">Mapa</string>
    <string name="dialog_data_load_title">Cargando..</string>
    <string name="dialog_data_load_body">Por favor espere</string>
    <string name="community_img_default_text">Cargando descripción de la imagen</string>
    <string name="make_photo">Realizar una foto</string>
    <string name="make_photo_options_title">Por favor elige</string>
        <array name="make_photo_options">
        <item>Cámara</item>
        <item>Galería</item>
    </array>
    <string name="notification_title">Subida finalizada</string>
    <string name="notification_desc">La carga de imágenes ha finalizado</string>
    
</resources>
