 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin_big"
	    android:paddingLeft="@dimen/activity_horizontal_margin_big"
	    android:paddingRight="@dimen/activity_horizontal_margin_big"
	    android:paddingTop="@dimen/activity_vertical_margin_big" >   
	
	    <TextView
	        android:id="@+id/descTitleStore"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="#555"
	        android:textColor="#fff"
	        android:padding="5dp"
	        android:layout_margin="-5dp"	        
	        android:layout_marginBottom="@dimen/activity_vertical_margin"
	        android:textAppearance="?android:attr/textAppearanceLarge"/>
	
	    <TextView
	        android:id="@+id/descDescStore"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/activity_vertical_margin"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/descDirStore"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	
	
	    <TextView
	        android:id="@+id/descTimesInfo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/activity_vertical_margin"
	        android:layout_marginTop="@dimen/activity_vertical_margin"
	        android:text="@string/descTimes"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/descTimes"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	
	    <TextView
	        android:id="@+id/descTlfStore"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/activity_vertical_margin"
	         />
	    
	    <TextView
	        android:id="@+id/descWeb"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/activity_vertical_margin"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/descEmail"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/activity_vertical_margin"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	   
	        
		<LinearLayout
		    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="@dimen/activity_vertical_margin_big"
        	android:layout_marginBottom="@dimen/activity_vertical_margin_big"
        	android:orientation="vertical"
        	android:layout_gravity="center"
		    android:background="#c0c0c0"
		    >
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:layout_marginBottom="0dp"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/gallery_button"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="#fff" />
	
	        <com.android.volley.toolbox.NetworkImageView
	            android:id="@+id/galButton"
	            android:layout_width="200dp"
	            android:layout_height="200dp"
	            android:scaleType="fitXY"
	            android:layout_marginLeft="@dimen/activity_horizontal_margin"
	            android:layout_marginRight="@dimen/activity_horizontal_margin"
	            android:layout_marginBottom="@dimen/activity_vertical_margin"
	            android:background="@android:color/transparent"
	            android:contentDescription="@string/gallery_button"
	            android:src="@drawable/photo_gallery" />		    
		</LinearLayout>
		
	 	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" 
	        android:layout_marginBottom="@dimen/activity_vertical_margin">
	
	        <ImageView
	            android:id="@+id/shotImgIcon"
	            android:layout_width="50dp"
	   			android:layout_height="50dp"
	            android:contentDescription="@string/shotImgIconDesc"
	            android:src="@drawable/comment" />
	        
			<TextView
			    android:id="@+id/descCommentInfo"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="@dimen/activity_horizontal_margin"
			    android:layout_marginTop="12dp"
			    android:text="@string/descComment"
			    android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    </LinearLayout>
			    
		<FrameLayout
		    android:id="@+id/store_detail_comments_container"
			android:layout_width="match_parent"        	
			android:layout_height="wrap_content"
		   />
		<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" 
	        android:layout_marginBottom="@dimen/activity_vertical_margin">

			<EditText
			    android:id="@+id/sendDetailComment"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_weight="6"
			    android:ems="10"
			    android:inputType="textMultiLine" >

			  
			</EditText>

			<ImageButton
			    android:id="@+id/sendDetailCommentButton"
			    android:layout_width="34dp"
			    android:layout_height="34dp"
			    android:background="@android:color/transparent"
			    android:contentDescription="@string/detailCommentButtonDesc"
			    android:src="@drawable/ic_send" />
		
		</LinearLayout>
		<Button
		    android:id="@+id/callButton"
		    style="@style/btnStyleBlack"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="@dimen/activity_vertical_margin"
		    android:layout_marginBottom="@dimen/activity_vertical_margin"
		    android:text="@string/call_button" />	
		
	</LinearLayout>			
</ScrollView>